cm4all-workshop (5.0.6) unstable; urgency=low

  * spawn: always drop capabilities in pidns init
  * debian: restart after upgrade

 --   

cm4all-workshop (5.0.5) unstable; urgency=low

  * spawn: support "T" suffix for Terabytes in RLIMITS
  * spawn: use close_range() on Linux 5.8+
  * debian: move postinst code to sysusers.d and tmpfiles.d
  * debian: support trigger "cm4all-workshop-reload-plans"

 -- Max Kellermann <mk@cm4all.com>  Tue, 22 Dec 2020 12:04:27 +0100

cm4all-workshop (5.0.4) unstable; urgency=low

  * spawn: support MOUNT_EMPTY

 -- Max Kellermann <mk@cm4all.com>  Tue, 08 Dec 2020 21:57:51 +0100

cm4all-workshop (5.0.3) unstable; urgency=low

  * spawn: fix stack overflow (disable ld.so lazy binding)

 -- Max Kellermann <mk@cm4all.com>  Tue, 03 Nov 2020 14:04:59 +0100

cm4all-workshop (5.0.2) unstable; urgency=low

  * spawn: fix seccomp regression

 -- Max Kellermann <mk@cm4all.com>  Wed, 21 Oct 2020 11:55:12 +0200

cm4all-workshop (5.0.1) unstable; urgency=low

  * workshop: add per-plan option to reap finished jobs
  * cron: translation packet STATUS indicates error
  * cron: translation packet MESSAGE may contain error details
  * cron: enable NO_NEW_PRIVS only if enabled by translation server
  * spawn: drop JailCGI/Refence support
  * spawn: allow multiple MOUNT_TMPFS

 -- Max Kellermann <mk@cm4all.com>  Tue, 18 Aug 2020 18:38:02 +0200

cm4all-workshop (4.8) unstable; urgency=low

  * spawn: allow configuring an open-ended "allow_user" range
  * spawn: fix crash bug

 -- Max Kellermann <mk@cm4all.com>  Wed, 03 Jun 2020 11:06:33 +0200

cm4all-workshop (4.7) unstable; urgency=low

  * workshop: higher log severity for plan loader errors
  * workshop: fix rate limit bug which broke resuming after the interval expired
  * spawn: forbid the clone3() system call

 -- Max Kellermann <mk@cm4all.com>  Thu, 14 May 2020 19:00:35 +0200

cm4all-workshop (4.6) unstable; urgency=low

  * work around compiler bug causing crashes on database error