@@ -1,0 +1,4 @@
+[Allow the spawner to create a systemd scope]
+Identity=unix-user:cm4all-workshop
+Action=org.freedesktop.systemd1.manage-units;
+ResultAny=yes
