@@ -1,5 +1,6 @@
 cm4all-workshop (5.0.6) unstable; urgency=low
 
+  * don't start as root, use Linux capabilities
   * spawn: always drop capabilities in pidns init
   * debian: restart after upgrade
 
